in python inputs/outputs of created node group not accessable by their names #36584

Closed
opened 2013-08-27 20:16:21 +02:00 by Alexander N. · 4 comments
Member

%%%--- Operating System, Graphics card ---
Windows 7 64bit,

- Blender version with error, and version that worked ---

current (or all) versions with issue

- Short description of error ---

when i create a 'ShaderNodeGroup' (+'NodeGroupOutput'+'NodeGroupInput') via script, i can not access its outputs and inputs by its names, even their names are unique, and visible when i iterate them by script.
i alwasy have to use the indices to get them.

node.inputs['blablabla'] -> fails
node.inputs- [x] -> works

(even when node.inputs- [x].name -> 'blablabla', or node.inputs- [x].identifier is set)

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  1. accessing by index
    1.1. open the attached blend file
    1.2. run script
    1.3. it works

  2. accessing by name (.outputs[key] or .outputs.get(key))
    2.1. open the attached blend file
    2.2. uncomment the test_case item 'BY_KEY' or 'BY_GET'
    2.3. run script
    2.4. it fails
    %%%

%%%--- Operating System, Graphics card --- Windows 7 64bit, - Blender version with error, and version that worked --- current (or all) versions with issue - Short description of error --- when i create a 'ShaderNodeGroup' (+'NodeGroupOutput'+'NodeGroupInput') via script, i can not access its outputs and inputs by its names, even their names are unique, and visible when i iterate them by script. i alwasy have to use the indices to get them. node.inputs['blablabla'] -> fails node.inputs- [x] -> works (even when node.inputs- [x].name -> 'blablabla', or node.inputs- [x].identifier is set) - Steps for others to reproduce the error (preferably based on attached .blend file) --- 1. accessing by index 1.1. open the attached blend file 1.2. run script 1.3. it works 2. accessing by name (.outputs[key] or .outputs.get(key)) 2.1. open the attached blend file 2.2. uncomment the test_case item 'BY_KEY' or 'BY_GET' 2.3. run script 2.4. it fails %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Your reported issue has been fixed in SVN. Thanks for taking the
time to report!.%%%

%%%Your reported issue has been fixed in SVN. Thanks for taking the time to report!.%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Member

%%%thank you for the fix. :)%%%

%%%thank you for the fix. :)%%%
Sign in to join this conversation.
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-addons#36584
No description provided.